<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:scrollbars="none"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backTopButton"
                android:elevation="@dimen/_5sdp"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/back_icon"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/back_icon_bg"
                android:padding="@dimen/_8sdp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/logo"
                    android:backgroundTint="@color/blue"/>

            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <EditText
            android:id="@+id/signup_fullname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="Name"
            android:elevation="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_light"
            android:textColorHint="@color/stroke_color"
            android:drawableStart="@drawable/user_name_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/account_stroke_bg"
            tools:ignore="Autofill,HardcodedText" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Username"
            android:elevation="@dimen/_10sdp"
            android:fontFamily="@font/roboto_light"
            android:textSize="@dimen/_12ssp"
            android:textColorHint="@color/stroke_color"
            android:drawableStart="@drawable/user_icon_register"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/account_stroke_bg"
            tools:ignore="Autofill,HardcodedText,TextFields" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Email"
            android:fontFamily="@font/roboto_light"
            android:elevation="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:inputType="textWebEmailAddress"
            android:textColorHint="@color/stroke_color"
            android:drawableStart="@drawable/email_fill"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/account_stroke_bg"
            tools:ignore="Autofill,HardcodedText" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="Password"
            android:elevation="@dimen/_10sdp"
            android:fontFamily="@font/roboto_light"
            android:textSize="@dimen/_12ssp"
            android:inputType="textWebPassword"
            android:textColorHint="@color/stroke_color"
            android:drawableStart="@drawable/password_lock"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/account_stroke_bg"
            tools:ignore="Autofill,HardcodedText" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            app:cornerRadius="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/blue"
            android:text="Sign Up"
            android:fontFamily="@font/roboto_regular"
            app:elevation="@dimen/_5sdp"
            android:elevation="@dimen/_10sdp"
            android:textSize="@dimen/_13ssp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_vertical">

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="#407C7C7C"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="or continue with"
                android:layout_marginStart="5dp"
                android:textColor="@color/stroke_color"
                tools:ignore="HardcodedText" />

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#407C7C7C"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:background="@drawable/stroke_account_circle">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/facebook"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sign_in_with_facebook"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_in_button_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:background="@drawable/stroke_account_circle">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sign_in_with_google"/>

            <!--            <com.google.android.gms.common.SignInButton-->
            <!--                android:id="@+id/sign_in_button"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"/>-->


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:background="@drawable/stroke_account_circle">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/twitter_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sign_in_with_google"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                />
            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:textColor="@color/blue"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_in"/>


        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>